@@ -174,6 +174,8 @@ teleportAuto_atkMiss 10
 teleportAuto_unstuck 0
 teleportAuto_dropTarget 0
 teleportAuto_attackedWhenSitting 0
+teleportAuto_totalDmg 0
+teleportAuto_totalDmgInLock 0
 
 
 dealAuto 1
